--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -33,6 +33,10 @@
 #text-contribute.limit-height
 .original-editor-wrap
 .protect-items .protect-item
+.material-wrp
+.video-data-container
+.data-card .data-card-detail
+.ct-fans-analysis
   background-color var(--c-background) !important
 
 .message-notice_wrap .tips-item_wrap
@@ -82,10 +86,17 @@
 .notify-tips
 .drop-cascader-container .drop-cascader-pre-wrp .drop-cascader-pre-item:hover
 .drop-cascader-container .drop-cascader-list-wrp .drop-cascader-list-item:hover
-  background-color var(--c-hover) !important
-
+.video-data-overview
+.data-from-container
+.data-archive-play
+.data-archive-play-complete
+.data-type-list
+.data-watcher
+.data-tags
 #dc-section_preference .list_wrap .list-item
-  background-color var(--c-hover)
+.tag-card .tag-card-detail
+.chunk-box
+  background-color var(--c-hover) !important
 
 .dc-progress-bar
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar
@@ -105,6 +116,7 @@
 .cover-chop-modal-v2-body .cover-chop-modal-v2-small-mask-top
 .cover-chop-modal-v2-body .cover-chop-modal-v2-small-mask-bottom
 .upload-step-3-container-v2 .upload-3-v2-success-split
+.progress
   background-color var(--c-border) !important
 
 .echarts
@@ -153,6 +165,10 @@ body
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar:before
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .active-bar
 .rookie_content .rookie_division li .div_name span .hot_tip
+.video-data-container .header-nav .selected::after
+.data-card-active .data-card-detail
+.nav-tab-container>div.active:after
+.progress .progress-item
   background-color var(--c-accent) !important
 
 .calendarEntry_box .calendarEntry_content .today
@@ -178,6 +194,14 @@ body
 .cc-article-wrp .del-wrp .modal-wrap .del-title
 .dc-section-item1_title_custom .sectionTitle
 .new-link-top-wrap .new-link-top-container .right-tips
+.video-data-container .header-nav .selected
+.data-card .data-card-detail .value
+.selection-button
+.data-from-archive-chart .archive-data .archive-data-item .item-last .archive-info .archive-info-title
+.data-card .content
+.fans-rank .top
+.fans-sticky-active .content .fans-sticky .fs-title
+.fans-rank-list-box .title-box
   color var(--c-title) !important
 
 .notice_wrap .notice_body .hot-item .item-right
@@ -205,6 +229,12 @@ body
 .upload-v2-step1-container .upload-agreement .reg-2
 .danmu-wrp .section .title-tip
 .cover-chop-modal-v2-body .cover-chop-modal-v2-body-right-text
+.material-wrp .header .material-tag
+.video-data-container .header-nav .item
+.data-card .data-card-detail .name
+.data-from-archive-chart .archive-data .archive-data-item .item-last .archive-info .archive-info-pub-time
+.data-from-archive-chart .archive-data .archive-data-more
+.nav-tab-container>div
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
@@ -246,6 +276,10 @@ i.icon-shape:after
 .qa-area-ol-wrp .qa-icon
 .notify-tips .icon_wrap i
 .article-card.v2 .meta-view .more-btn:hover:not(.disabled) i
+.data-from-archive-chart .archive-data .archive-data-item .item-last .archive-operate>div:hover .archive-operate-text
+.data-from-archive-chart .archive-data .archive-data-item .item-last .archive-operate>div:hover svg
+.data-from-archive-chart .archive-data .archive-data-more:hover
+.nav-tab-container>div.active
   color var(--c-accent) !important
 
 .bili-share-pc
@@ -327,6 +361,12 @@ i.icon-shape:after
 .label-item-v2-2-container
 .common-modal-container .common-modal-content .common-modal-head
 .article-card.v2 .meta-status .pubdate
+.material-wrp .content .tabs .tabs__header
+.data-from-terminal-bar-wrap
+.data-from-person-pie-wrap
+.data-from-archive-chart .archive-data .archive-data-item .item-last
+.data-from-archive-chart .archive-data .archive-data-more
+.graphics-box
   border-color var(--c-border) !important
 
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
@@ -334,6 +374,7 @@ i.icon-shape:after
 .section-item.actived
 .new-link-top-wrap .link-top-item.active
 .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-items .selector-item-selected
+.data-from-archive-chart .archive-data .archive-data-more:hover
   border-color var(--c-accent) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
@@ -369,6 +410,7 @@ i.icon-shape:after
 .editor-box
 .editor-box .editor-toolbar .child-list
 .classify .sub-list
+.fans-rank-list-box
   border 1px solid var(--c-border) !important
 
 .toolbox
@@ -410,6 +452,7 @@ i.icon-shape:after
 .rank-fans-medal
 .rank-vedio-target
 .rank-vedio-view
+.fans-rank-list-box
   box-shadow none !important
 
 .ui-dropdown .default
@@ -463,6 +506,10 @@ i.icon-shape:after
 .cc-album-create .info-wrp
   margin-top 40px
   padding-bottom 20px
+
+.data-from-archive-chart .archive-data .archive-data-more
+  margin-right 32px
+  transition all 0.3s ease-in-out !important
 
 .notice_wrap
 .data-card
