--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -226,6 +226,7 @@ textarea
 .month-selector .month-info .month-list
 .danmaku-menu
 .bui-dropdown .bui-dropdown-items
+.settings-panel
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
