--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -123,6 +123,8 @@ button
 .upload-step-3-container-v2 .upload-3-v2-follow-btn.follow
 .back-top-btn
 .video-toolbar .note-btn
+.material-wrp .header .op .up-btn
+.selection-button.selected
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
