--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -18,6 +18,8 @@
 .vote-result-comment
 #bp-app
 .detail-content .detail-card .card
+.bili-topic-search__popover
+.bili-topic-selector__bulletin
   background-color var(--c-background) !important
 
 .core-style
@@ -29,6 +31,11 @@
 .imagesbox .boost-img
 .img-content
 .option-li:hover
+.bili-topic-search__popover.active .bili-topic-search__input
+.bili-topic-item__cloud:hover
+.bili-topic-selector__bulletin__clear
+.bili-topic-item__normal:hover
+.settings-panel__option:hover
   background-color var(--c-hover) !important
 
 #app
@@ -68,10 +75,12 @@
 .choice-count-text
 .share-to-dynamic
 .anonymous
+.settings-panel__option
   color var(--c-text) !important
 
 .sticky-bar .bar-content .title
 .sticky-bar .bar-content .f-right .message a
+.bili-topic-item__cloud__name
   color var(--c-white) !important
 
 .tab-bar .tab .tab-text.selected
@@ -82,6 +91,11 @@
 .joined-number
 .expand-btn
 .card .button-area .more-button:hover
+.bili-topic-item__cloud__prefix
+.bili-topic-item__normal__prefix
+.bili-topic-item__normal__name
+.bili-topic-selector__bulletin__clear__icon
+.settings-panel__option--active
   color var(--c-accent) !important
 
 .upload-image .upload-btn
@@ -90,6 +104,7 @@
 .vote-number
 .option-li
 .detail-content .detail-card .card
+.bili-topic-search__popover
   border-color var(--c-border) !important
 
 .tab-wrap .tab-item.active
@@ -135,6 +150,9 @@ body
 
 .top-header .focus-btn
   position absolute !important
+
+.bili-topic-search__input
+  cursor pointer
 
 .user-panel .content .user-head
   left 71px !important
