--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -10,6 +10,9 @@
 .bili-header-m .nav-menu .up-load .u-link
 	line-height 50px
 
+#app
+#header-v3
+.v-wrap
 .user-card-m
 .collection-m
 .coin-operated-m
