--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -58,7 +58,7 @@
 		opacity 1
 		transform translateY(0)
 
-	for n in 2 3 4 5 6 7 8
+	for n in 2 3 4 5 6 7 8 9 10 11 12 13 14 15
 		&:nth-child({n})
 			transition-delay 0.05s * (n - 1)
 
