--- a/bilibili-dark/src/index.styl
+++ b/bilibili-dark/src/index.styl
@@ -74,18 +74,5 @@
 @advanced  color  dark_graph_icon "深-图标" #cacaca
 ==/UserStyle== */
 @-moz-document domain("bilibili.com") {
-  /*![[defaultTheme]]*/
-  .eva-banner
-  .eva-extension-area
-  .ad-report
-  .slide-ad-exp {
-    overflow hidden !important
-    white-space nowrap !important
-    margin 0 !important
-    padding 0 !important
-    height 1px !important
-    width 1px !important
-    clip rect(0 0 0 0) !important
-    clip-path inset(100%) !important
-  }
+  @import 'base'
 }
