fix: styles error

--- a/bilibili-dark/src/base.styl
+++ b/bilibili-dark/src/base.styl
@@ -3,6 +3,7 @@
 .eva-extension-area
 .ad-report
 .slide-ad-exp
+  position absolute
   overflow hidden !important
   white-space nowrap !important
   margin 0 !important
