--- a/bilibili-palette/src/index.styl
+++ b/bilibili-palette/src/index.styl
@@ -1,12 +1,12 @@
 /* ==UserStyle==
-@name           bilibili-dark
+@name           bilibili-palette
 @namespace      tolking-usercss
 @version        1.0.0
-@description    为新版 bilibili 页面增加深色模式
+@description    为新版 bilibili 界面增加颜色配置，并增加深色模式
 @author         tolking <qw13131wang@gmail.com>
-@homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-dark
+@homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-palette
 @supportURL			https://github.com/tolking/usercss/issues
-@updateURL			https://tolking.github.io/usercss/bilibili-dark/index.user.css
+@updateURL			https://tolking.github.io/usercss/bilibili-palette/index.user.css
 @license				MIT
 @preprocessor		uso
 
