--- a/bilibili-core/src/home.styl
+++ b/bilibili-core/src/home.styl
@@ -72,7 +72,7 @@
           background-color transparent
           font-size: 0
           &:hover svg
-            transform: rotate(180deg)
+            transform: rotate(180deg) !important
           svg
             margin-right 0
             width 26px
