--- a/bilibili-palette/index.user.css
+++ b/bilibili-palette/index.user.css
@@ -79,7 +79,7 @@
   .eva-extension-area,
   .ad-report,
   .slide-ad-exp {
-    position: absolute;
+    position: absolute !important;
     overflow: hidden !important;
     white-space: nowrap !important;
     margin: 0 !important;
