--- a/bilibili-palette/src/base.styl
+++ b/bilibili-palette/src/base.styl
@@ -3,7 +3,7 @@
 .eva-extension-area
 .ad-report
 .slide-ad-exp
-  position absolute
+  position absolute !important
   overflow hidden !important
   white-space nowrap !important
   margin 0 !important
