--- a/bilibili-core/src/header.styl
+++ b/bilibili-core/src/header.styl
@@ -35,4 +35,8 @@
           display none
     .bili-header__channel
       .channel-icons
+      .channel-items__right
         display none
+      .channel-items__left
+        padding-right 0
+        border-right 0
