--- a/bilibili-palette/index.user.css
+++ b/bilibili-palette/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-palette
 @namespace      tolking-usercss
-@version        1.0.0
+@version        1.0.1
 @description    为新版 bilibili 界面增加颜色配置，并增加深色模式
 @author         tolking <qw13131wang@gmail.com>
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-palette
@@ -78,7 +78,8 @@
   .eva-banner,
   .eva-extension-area,
   .ad-report,
-  .slide-ad-exp {
+  .slide-ad-exp,
+  .single-card.floor-card .layer {
     position: absolute !important;
     overflow: hidden !important;
     white-space: nowrap !important;
@@ -88,6 +89,18 @@
     width: 1px !important;
     clip: rect(0 0 0 0) !important;
     clip-path: inset(100%) !important;
+  }
+  .single-card.floor-card {
+    border-color: transparent !important;
+  }
+  .floor-single-card .title {
+    color: var(--text1);
+  }
+  .single-card.floor-card .badge {
+    background-color: var(--bg2_float) !important;
+  }
+  .bili-feed4 .bili-header .slide-down {
+    box-shadow: none !important;
   }
   ::-webkit-scrollbar {
     max-width: 6px;
