feat: update bilibili-palette

--- a/bilibili-palette/src/base.styl
+++ b/bilibili-palette/src/base.styl
@@ -3,6 +3,7 @@
 .eva-extension-area
 .ad-report
 .slide-ad-exp
+.single-card.floor-card .layer
   position absolute !important
   overflow hidden !important
   white-space nowrap !important
